# PP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  Makefile  Papo  README.md  action.yml  build.sh  clean.sh  docker.sh  entrypoint.sh  format.sh  operators.txt  test.sh
PP/: CMakeLists.txt  PP.cpp  add_const.hpp  add_cv.h  add_cv.hpp  add_cv_ref.hpp  add_function_cvrefn.h  add_function_cvrefn.hpp  add_pointer.hpp  add_ref.h  add_ref.hpp  add_reference.hpp  add_volatile.hpp  alignment_of.hpp  all_of.hpp  always_false.hpp  any_iterator.h  any_iterator.hpp  any_of.hpp  any_view.cpp  any_view.hpp  append_pack.h  append_pack.hpp  applier.hpp  apply_pack.h  apply_pack.hpp  apply_partially.hpp  apply_partially_first.hpp  apply_template.hpp  apply_template_pack.hpp  apply_transform.hpp  arg_splitter.hpp  array.hpp  array_ostream.h  array_ostream.hpp  array_vector.hpp  arrow_operator_wrapper.hpp  base.hpp  basic_ostream.hpp  call.hpp  (+297 more)
PP/concepts/: arithmetic.hpp  array.hpp  bounded_array.hpp  character.hpp  class.hpp  complete_object.hpp  constructible.hpp  convertible_to.hpp  copyable.hpp  derived_from.hpp  destructible.hpp  empty.hpp  enum.hpp  equatable.hpp  floating_point.hpp  function.hpp  function_cvref.hpp  function_pure.hpp  fundamental.hpp  fundamental_types.hpp  integer.hpp  integral.hpp  invocable.hpp  lvalue_reference.hpp  non_array_object.hpp  non_union_class.hpp  non_void.hpp  non_void_fundamental.hpp  nonvoid.hpp  null.hpp  object.hpp  pointable.hpp  pointer.hpp  pointer_to_member.hpp  referencable.hpp  reference.hpp  returnable.hpp  rvalue_reference.hpp  same.hpp  same_except_cv.hpp  (+11 more)
PP/containers/: array.hpp  array_vector.hpp  singular.hpp  tuple.hpp  tuple_std.hpp  type_tuple.hpp
PP/functional/: applier.hpp  apply.hpp  apply_pack.hpp  apply_partially.hpp  apply_partially_first.hpp  apply_partially_simple.hpp  comparisons.hpp  compose.hpp  compose_apply.hpp  constant.hpp  construct.hpp  construct_pack.hpp  curry.hpp  disjunction.hpp  equal.hpp  functor.hpp  id.hpp  map_arguments.hpp  negate.hpp  noop.hpp  operators.hpp  reorder.hpp
PP/macros/: CIA.hpp  functor.hpp  simple_concept.hpp
PP/pack/: all_c.hpp  any.hpp  any_c.hpp  apply_template.hpp  combinator_and_l.hpp  combinator_and_r.hpp  combinator_f_c.hpp  combinator_map_c.hpp  combinator_or_l.hpp  combinator_or_r.hpp  fold.hpp  fold_init.hpp  get.hpp  map.hpp  map_c.hpp  map_cc.hpp  remove_first.hpp  select_first.hpp
PP/tuple/: all.hpp  any.hpp  apply.hpp  apply_template.hpp  cartesian_product.hpp  concat.hpp  concept.hpp  contains.hpp  count.hpp  count_if.hpp  disjunction.hpp  element.hpp  empty.hpp  equal.hpp  filter.hpp  find.hpp  find_dynamic.hpp  find_get.hpp  find_index_state.hpp  fold.hpp  fold1.hpp  fold_init.hpp  for_each.hpp  forward_array.hpp  get.hpp  get_dynamic.hpp  get_element.hpp  get_types.hpp  head_element.hpp  head_no_get.hpp  make.hpp  make_array.hpp  map.hpp  map_to_array.hpp  pred.hpp  prepend.hpp  recursive.hpp  split.hpp  splits.hpp  to_array.hpp  (+5 more)
PP/utility/: forward.hpp  move.hpp
PP/view/: any.hpp  chain.hpp  concept.hpp  copy.hpp  copy_uninitialized.hpp  destroy.hpp  empty.hpp  equal.hpp  find.hpp  first_equal.hpp  fold.hpp  for_each.hpp  lower_bound.hpp  move.hpp  move_uninitialized.hpp  pair.hpp  prefix.hpp  remove.hpp  shift.hpp  subsequence.hpp  subsequence_compare.hpp  tuple.hpp  tuple_std.hpp  unbounded.hpp  zip.hpp  zip_if.hpp  zip_iterator_std.hpp
PPdemo/: CMakeLists.txt  main.cpp
PPtest/: CMakeLists.txt  PPtest.cmake  PPtest.cpp  PPtest.hpp  add_const.cpp  call_reorder.cpp  combine.cpp  conjunction.cpp  counter.cpp  counter.hpp  cout.cpp  function_type.hpp  lambda.hpp  lower_bound.cpp  main.cpp  ostream_std.cpp  pack_all_c.cpp  pack_fold.cpp  pack_fold_init.cpp  pack_map_c.cpp  partial_c.cpp  partial_first_c.cpp  to_chars.cpp  tuple_any.cpp  tuple_apply.cpp  tuple_concat.cpp  tuple_fold.cpp  uncopiable.hpp  vector.cpp  view_subsequence.cpp  zip_unbounded.cpp
Papo/: CMakeLists.txt  Papo.cpp  Papo.hpp  Papo.sln  algorithm.hpp  any_of.hpp  array_vector.hpp  compressed_pair.hpp  concepts.hpp  constructible.hpp  copy.hpp  data.hpp  declval.hpp  different_cvref.hpp  dynamic_block.hpp  exchange.hpp  find.hpp  id.hpp  io.hpp  iterator.hpp  math.hpp  move.hpp  nonvoid.hpp  odd.hpp  placeholder.hpp  same.hpp  scoped.hpp  simple_vector.hpp  simple_view.hpp  size_t.hpp  trait.hpp  transform_view.hpp  type.hpp  unbounded.hpp  unique.hpp  unique_pointer.hpp  unique_raw_pointer.hpp  utility.hpp  view.hpp  zip_with.hpp
Papo/Papo/: Papo.vcxproj  Papo.vcxproj.filters
Papo/algorithm/: CMakeLists.txt  accumulate.hpp  adjacent_find.hpp  all_of.hpp  any_of.hpp  apply.hpp  construct.hpp  copy.hpp  copy_backward.hpp  copy_backward_if.hpp  destroy.hpp  destroy_at.hpp  equal.hpp  fill.hpp  find.hpp  generate.hpp  iota.hpp  it_swap.hpp  move.hpp  move_backward.hpp  next.hpp  prev.hpp  range.hpp  remove.hpp  search.hpp  split.hpp  u_copy.hpp  u_fill.hpp  u_generate.hpp  u_move.hpp
Papo/concepts/: CMakeLists.txt
Papo/data/: CMakeLists.txt  any.hpp  array.hpp  bit.cpp  block.hpp  circular_list.hpp  complex.cpp  cstring.cpp  cstring.hpp  list.cpp  list.hpp  optional.hpp  (+2 more)
src/: Btree.hpp  CMakeLists.txt  Q.hpp  accumulate.hpp  add_const.hpp  add_cv.hpp  add_volatile.hpp  adjacent_find.hpp  all_of.hpp  almost.hpp  any_of.hpp  apply.hpp  array.hpp  ary_tree.hpp  as_lvalue.hpp  assignable.hpp  big_int.hpp  bim.hpp  bit.cpp  bit.hpp  block.hpp  bool_t.hpp  byte.hpp  callable.hpp  character.hpp  circular_list.hpp  class_type.hpp  complex.cpp  complex.hpp  conditional.hpp  conditional_transform.hpp  const.hpp  const_type.hpp  construct.hpp  constructible.hpp  constructible_template.hpp  container.hpp  convertible.hpp  copy.hpp  copy_backward.hpp  (+174 more)
test/: CMakeLists.txt  add_const.cpp  call_reorder.cpp  main.cpp  pack_fold_init.cpp  pack_map_c.cpp  partial_c.cpp  partial_first_c.cpp  test.cpp  test.hpp
tests/: CMakeLists.txt  add_const.cpp  call_reorder.cpp  combine_meta_c.cpp  pack_fold_init.cpp  pack_map_c.cpp  partial_c.cpp  partial_first_c.cpp
(+375 files in other folders)
